// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Word renders with color blast-off 1`] = `
<text
  className="ax-word ax-word--blast-off"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color crash-course 1`] = `
<text
  className="ax-word ax-word--crash-course"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color critical-mass 1`] = `
<text
  className="ax-word ax-word--critical-mass"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color deep-thought 1`] = `
<text
  className="ax-word ax-word--deep-thought"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color electric-dreams 1`] = `
<text
  className="ax-word ax-word--electric-dreams"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color fantastic-voyage 1`] = `
<text
  className="ax-word ax-word--fantastic-voyage"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color giant-leap 1`] = `
<text
  className="ax-word ax-word--giant-leap"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color ground-control 1`] = `
<text
  className="ax-word ax-word--ground-control"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color luna-dust 1`] = `
<text
  className="ax-word ax-word--luna-dust"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color moon-lagoon 1`] = `
<text
  className="ax-word ax-word--moon-lagoon"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color new-horizon 1`] = `
<text
  className="ax-word ax-word--new-horizon"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color paradise-lost 1`] = `
<text
  className="ax-word ax-word--paradise-lost"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color primeval-soup 1`] = `
<text
  className="ax-word ax-word--primeval-soup"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color serene-sea 1`] = `
<text
  className="ax-word ax-word--serene-sea"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color space-invader 1`] = `
<text
  className="ax-word ax-word--space-invader"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color space-oddity 1`] = `
<text
  className="ax-word ax-word--space-oddity"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color sun-maker 1`] = `
<text
  className="ax-word ax-word--sun-maker"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color terra-form 1`] = `
<text
  className="ax-word ax-word--terra-form"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with color tiny-clanger 1`] = `
<text
  className="ax-word ax-word--tiny-clanger"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with defaultProps 1`] = `
<text
  className="ax-word"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with disabled 1`] = `
<text
  className="ax-word ax-word--disabled"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with hidden 1`] = `
<text
  className="ax-word ax-word--hidden"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with hidden and disabled 1`] = `
<text
  className="ax-word ax-word--hidden"
  onClick={undefined}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;

exports[`Word renders with onClick 1`] = `
<text
  className="ax-word ax-word--clickable"
  onClick={[Function]}
  style={
    Object {
      "animationDelay": "0",
      "fontFamily": "Roboto, Helvetica, Arial, sans-serif",
      "fontSize": undefined,
    }
  }
  textAnchor="middle"
  transform="translate(0,0)"
/>
`;
